# ctp-rust

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  UNIFIED_WRAPPER_MIGRATION.md  build.rs
docs/: api.md
examples/: async_md_basic.rs  async_trader_basic.rs  debug_logger.rs  encoding_demo.rs  error_handling.rs  md_basic.rs  trader_basic.rs
libs/ctp/common/: debug_logger.cpp
libs/ctp/linux/include/: ThostFtdcUserApiStruct.h
libs/ctp/linux/lib/: readme.md
libs/ctp/linux/wrapper/: Makefile  ctp_wrapper.cpp  spi_bridge.cpp  spi_bridge.h
libs/ctp/mac64/: README.txt
libs/ctp/mac64/lib/: readme.md
libs/ctp/mac64/wrapper/: Makefile  ctp_wrapper.cpp  ctp_wrapper.h  spi_bridge.h
libs/ctp/wrapper/: Makefile  README.md  ctp_wrapper.cpp  ctp_wrapper.h  logger.cpp  logger.h  spi_bridge.cpp  spi_bridge.h
src/: api.rs  config.rs  encoding.rs  error.rs  ffi.rs  lib.rs  types.rs
src/api/: async_md_api.rs  async_trader_api.rs  md_api.rs  trader_api.rs  utils.rs
test_integration/: Cargo.toml
test_integration/src/: main.rs
tests/: encoding_tests.rs
